kantilever-case3/common/deployment/manifests/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    certmanager.k8s.io/issuer: "letsencrypt-production"
spec:
  rules:
    - host: macedonieje.maartenprojecten.nl
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: frontend-service
              servicePort: 80
    - host: pgadmin.macedonieje.maartenprojecten.nl
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: pgadmin-svc
              servicePort: 5050
    - host: rabbitmq.macedonieje.maartenprojecten.nl
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: rabbitmq-svc
              servicePort: 15672

    - host: admin.macedonieje.maartenprojecten.nl
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: backofficefrontend-service
              servicePort: 80
    - host: identity.macedonieje.maartenprojecten.nl
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: identity-service
              servicePort: 80
